# agent-quant-stock-invest

./: .env.example  .gitignore  README.md  agent_setup.py  agent_tools.py  agent_workflow.py  constant.py  main.py  pyproject.toml
agent_framework/: __init__.py  main.py  models.py  research_repl.py  tools.py  workflow.py
agent_framework_patterns/: agent-as-mcp-server.py  agent-as-tool-handoff.py  agent-evaluation-foundry.py  agent-evaluation-local.py  agent-middleware-retry.py  background-agents.py  canonical-agent-creation.py  declarative-agent.py  declarative-workflow.py  devui-local-development.py  error-handling.py  foundry-prompt-agent.py  foundry-toolbox-mcp-http.py  harness-agent.py  hosted-bing-search.py  inline-skill-definition.py  local-mcp-stdio.py  multi-agent-workflow.py  observability-azure-monitor.py  observability-otel.py  observability-workflow-tracing.py  persistent-history-cosmos.py  rag-with-azure-ai-search.py  rag-with-file-search.py  session-history-persistence.py  streaming-output.py  structured-output-pydantic.py  workflow-as-agent-nesting.py  workflow-checkpointing.py  workflow-evaluation.py
agents/: __init__.py  agents.py  prompts.py  tools.py  workflow.py
autogen/: .env.template  agent_quant.py  agent_workflow_e2e.py  pyproject.toml
dev_ui/: main_dev_ui.py
docs/: agent_framework.md  agent_framework_patterns.md  autogen.md  autogen_agent_sk.md  semantic_kernel.md
human_in_loop/: main_invest_approval.py
legacy_autogen/: README.md
output/: backtest_metrics.txt  backtest_results.xlsx  stock_data.csv  stock_signals.csv
(+101 files in other folders)
