[project]
name = "agent-quant-stock-invest"
version = "0.1.0"
description = ""
authors = [
    {name = "kimtth"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agent-framework>=1.11.0",
    "agent-framework-foundry>=1.10.1",
    "matplotlib>=3.10.6",
    "mcp>=1.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.10,<2.13",
    "python-dotenv>=1.1.1",
    "semantic-kernel>=1.36.0",
    "ta>=0.11.0",
    "yfinance>=0.2.66",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]
